# obs-spout2-plugin

./: CMakeLists.txt
source/: win-spout-source.cpp  win-spout.cpp  win-spout.h
